tests/rosetta/transpiler/erl/file-input-output-3.erl
#!/usr/bin/env escript
-module(main).
-compile([nowarn_shadow_vars, nowarn_unused_vars]).
-export([main/1, copyfile/2, main/0]).

% Generated by Mochi transpiler v0.10.55 (6aa59f472e) on 2025-08-02 17:26 +0700


mochi_now() ->
    case erlang:get(now_seed) of
        undefined ->
            case os:getenv("MOCHI_NOW_SEED") of
                false -> erlang:system_time(nanosecond);
                S ->
                    case catch list_to_integer(S) of
                        {'EXIT', _} -> erlang:system_time(nanosecond);
                        Seed ->
                            erlang:put(now_seed, Seed),
                            mochi_now()
                    end
            end;
        Seed ->
            Seed2 = (Seed * 1664525 + 1013904223) rem 2147483647,
            erlang:put(now_seed, Seed2),
            Seed2
    end.

copyfile(Out, Inp) ->
    try
        S = "",
        Fun = fun Fun_loop(List, Inp, Out, S) ->
    case List of
        [] -> {Inp, Out, S};
        [Ch|Ch_rest] ->
            S_2 = (S ++ Ch),
            Fun_loop(Ch_rest, Inp, Out, S_2)
    end
end,
{Inp, Out, S_2} = Fun(maps:get(Inp, erlang:get('fs'), nil), Inp, Out, S),
        Fs = erlang:get('fs'),
        Fs_2 = maps:put(Out, S_2, Fs),
        erlang:put('fs', Fs_2),
        nil
    catch {return, Ret} -> Ret end.

main() ->
    try
        copyfile("output.txt", "input.txt"),
        io:format("~p~n", [maps:get("output.txt", erlang:get('fs'), nil)]),
        nil
    catch {return, Ret} -> Ret end.

main(_) ->
    BenchStart = mochi_now(),
    BenchStartMem = erlang:memory(total),
    erlang:put('fs', #{"input.txt" => "example"}),
    main(),
    BenchEnd = mochi_now(),
    BenchEndMem = erlang:memory(total),
    DurationUs = (BenchEnd - BenchStart) div 1000,
    MemBytes = erlang:abs(BenchEndMem - BenchStartMem),
    io:format("{~n  \"duration_us\": ~p,~n  \"memory_bytes\": ~p,~n  \"name\": \"main\"~n}
", [DurationUs, MemBytes]).
